--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: PHP Runner
 on:
     push:
         branches:
-            - docs
+            - main
     schedule:
         - cron: "*/14 * * * *"
 
